--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=usuario
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
+
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
