CSP READ/CREATE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){faint} %clr(%p) %clr(${LOG_PATTERN:-%c}){cyan} %m%n
