--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 #
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){faint} %clr(%p) %clr(${LOG_PATTERN:-%c}){cyan} %m%n
+
+#
+logging.level.com.lenguajes.technomind=INFO
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate=INFO
+logging.level.org.springframework.orm.jpa=INFO
