--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.main.banner-mode=off
 
 server.port=80
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=usuario
-spring.datasource.password=123
+spring.datasource.username=hr
+spring.datasource.password=hr
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
 
